testsuite/tests/typecheck/should_fail/T18939_Fail.stderr

T18939_Fail.hs:5:1: error:
    • Illegal polymorphic type: forall a -> a
      Perhaps you intended to use RankNTypes
    • In the data type declaration for ‘F’
